--- a/Finnish/main/MiuiGallery.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiGallery.apk/res/values-fi-rFI/strings.xml
@@ -103,7 +103,7 @@
   <string name="add_to_album_success">Lisättiin albumiin</string>
   <string name="add_to_album_tip">Kuvat pilvessä</string>
   <string name="add_to_favorites_failed">Ei voitu lisätä suosikkeihin</string>
-  <string name="add_to_secret_exist">Kuva on jo olemassa piilotetussa albumissa</string>
+  <string name="add_to_secret_exist">Tämä kohde on jo olemassa piilotetussa albumissa</string>
   <string name="add_to_secret_fail">Piilotettuun albumiin lisääminen epäonnistui</string>
   <string name="add_to_secret_failed_with_reason">Piilotettuun albumiin ei voi lisätä. %1$s.</string>
   <string name="add_to_secret_successful">Lisättiin piilotettuun albumiin</string>
@@ -277,8 +277,14 @@
   <string name="base_btn_download">Lataa</string>
   <string name="begin_share">Luotiin Vauva albumi \"%s\", voit jakaa sen nyt</string>
   <string name="begin_share_toast">Luodaanko erillinen albumi tälle lapselle ennen jakamista?</string>
-  <string name="blank_app_name"/>
   <string name="browse_category_title">Selaa</string>
+  <string name="burst_image_download_item_title" formatted="false">Lataa alkuperäinen (%s|%s)</string>
+  <string name="burst_preview_title">Sarjakuva</string>
+  <string name="burst_save_all">Tallenna kaikki</string>
+  <string name="burst_save_choice_title" formatted="false">Valittuna %d/%d</string>
+  <string name="burst_save_confirm_dialog_title">Tallennetaan kuvia</string>
+  <string name="burst_save_error_msg">Ei voitu tallentaa</string>
+  <string name="burst_save_processing">Käsitellään…</string>
   <string name="buy_member_tip">Ryhdy jäseneksi</string>
   <string name="by_email">Sähköposti</string>
   <string name="by_others">Muu</string>
@@ -800,6 +806,8 @@
   <string name="custom_select_title_select_item">Valitse kohteet</string>
   <string name="debugging_info">Virheenkorjaustiedot on luotu onnistuneesti. Avaa kansio napauttamalla OK.</string>
   <string name="debugging_tip">Luodaan virheenkorjaustiedot</string>
+  <string name="decrypt_video_failed">Videota ei voitu valmistella</string>
+  <string name="decrypting_video">Valmistellaan videota…</string>
   <string name="default_relation_name">Uusi ryhmä</string>
   <string name="define_by_user">Oma valinta</string>
   <string name="delete">Poista</string>
@@ -856,6 +864,10 @@
   <string name="downloading_dialog_message">Voit valita ladattujen kuvien laadun tai poistaa automaattiset lataukset käytöstä Asetuksissa.</string>
   <string name="downloading_title">Ladataan kuvia Mi Pilvestä</string>
   <string name="edit_baby_info">Näytä vauvan tiedot</string>
+  <string name="editor_cancel">Peruuta</string>
+  <string name="editor_export">Tallenna</string>
+  <string name="editor_talkback_redo">Tee uudelleen</string>
+  <string name="editor_talkback_undo">Kumoa</string>
   <string name="email_picker_title">Lisää jaettu sähköposti</string>
   <string name="empty_description_conditions">Muista merkitykselliset tarinat</string>
   <string name="empty_description_no_cards">Muista merkitykselliset tarinat</string>
@@ -1029,7 +1041,7 @@ on käytettävissä"</string>
   <string name="filter_people_movie">Elokuva</string>
   <string name="filter_people_nature">Luonnollinen</string>
   <string name="filter_people_pink">Punastu</string>
-  <string name="filter_people_riddle">Arvoitus</string>
+  <string name="filter_people_riddle">Karkki</string>
   <string name="filter_people_sepia">Seepia</string>
   <string name="filter_people_story">Tarina</string>
   <string name="filter_people_tea">Tee</string>
@@ -1054,6 +1066,7 @@ on käytettävissä"</string>
   <string name="filter_sky_sunset">Auringonlasku</string>
   <string name="finish_create_baby_album_toast">Luotiin albumi \"%s\" Mi Pilveen</string>
   <string name="finish_fill_baby">Luo</string>
+  <string name="first_time_add_video_to_secret_tips">Päivitä Galleria piilottaaksesi videoita</string>
   <string name="flash_off">Ei salamaa</string>
   <string name="flash_on">Salama käytössä</string>
   <string name="frame_not_support_image_ratio">Tätä kuvasuhdetta ei tueta</string>
@@ -1342,7 +1355,7 @@ mukauttaaksesi Galleriasi"</string>
   <string name="photo_editor_crop_rotation_format">%d°</string>
   <string name="photo_editor_doodle">Piirrä</string>
   <string name="photo_editor_filter">Suodata</string>
-  <string name="photo_editor_font_default">&gt;Mi Lanting (Tavallinen)</string>
+  <string name="photo_editor_font_default">Mi Lanting (Tavallinen)</string>
   <string name="photo_editor_frame">Kehys</string>
   <string name="photo_editor_label">Muokkaa</string>
   <string name="photo_editor_long_crop">Rajaa</string>
@@ -1373,6 +1386,7 @@ mukauttaaksesi Galleriasi"</string>
   <string name="photo_editor_navigator_module_downloading">Ladataan %s…</string>
   <string name="photo_editor_navigator_need_download">Yhdistä internetiin ladataksesi %s.</string>
   <string name="photo_editor_remove_watermark">Poista vesileima</string>
+  <string name="photo_editor_remove_watermark_on">Lisää vesileima</string>
   <string name="photo_editor_remover">Poista</string>
   <string name="photo_editor_rotate">Kierrä</string>
   <string name="photo_editor_saving">Tallennetaan…</string>
@@ -1381,6 +1395,7 @@ mukauttaaksesi Galleriasi"</string>
   <string name="photo_editor_talkback_confirm">Vahvista</string>
   <string name="photo_editor_talkback_crop_16_9">Kuudentoista suhde yhdeksään</string>
   <string name="photo_editor_talkback_crop_1_1">Yhden suhde yhteen</string>
+  <string name="photo_editor_talkback_crop_2_3">Kahden suhde kolmeen</string>
   <string name="photo_editor_talkback_crop_3_4">Kolmen suhde neljään</string>
   <string name="photo_editor_talkback_crop_4_3">Neljän suhde kolmeen</string>
   <string name="photo_editor_talkback_crop_9_16">Yhdeksän suhde kuuteentoista</string>
@@ -1640,17 +1655,26 @@ mukauttaaksesi Galleriasi"</string>
   <string name="slideshow_interval_invalid">Intervallin täytyy olla 3 ja 3600 sekunnin välillä</string>
   <string name="slideshow_interval_title">Näytä jokaista diaa</string>
   <string name="slideshow_interval_value">%1$d sekuntia</string>
-  <string name="slim_after_backuped_summary">Korvaa laitteella olevat alkuperäiset kuvat optimoiduilla versioilla, kun ne ovat varmuuskopioitu Mi Pilveen. Alkuperäiset kuvat ovat silti käytettävissä Mi Pilvessä. Tämä voi säästää paljon paikallista tallennustilaa.</string>
-  <string name="slim_after_backuped_title">Optimoi paikallinen tallennustila varmuuskopioinnin jälkeen</string>
-  <string name="slim_dialog_message">Optimoidut HD-kuvat ladataan Mi Pilvestä alkuperäisten tiedostojen sijaan.</string>
-  <string name="slim_introduce">Korvaa laitteella olevat alkuperäiset kuvat optimoiduilla versioilla, kun ne ovat varmuuskopioitu Mi Pilveen. Alkuperäiset kuvat ovat silti käytettävissä Mi Pilvessä.</string>
-  <string name="slim_introduce_with_specific_size">Korvaa laitteella olevat alkuperäiset kuvat optimoiduilla versioilla, kun ne ovat varmuuskopioitu Mi Pilveen. Alkuperäiset kuvat ovat silti käytettävissä Mi Pilvessä. Tämä voi säästää jopa %1$s paikallista tallennustilaa (Mi Tili vaaditaan).</string>
-  <string name="slim_now">Optimoi nyt</string>
-  <string name="slim_result_size">Säästettiin %1$s</string>
-  <string name="slim_result_title">Optimoitu onnistuneesti</string>
-  <string name="slim_tip_msg">Tiedostot optimoidaan kun laitteesi on yhdistettynä Wi-Fi-verkkoon. Lataa täyden resoluution tiedostot napauttamalla \"Lataa alkuperäinen tiedosto\" valikkoa kuvan tiedot-sivulla.</string>
-  <string name="slim_tip_title">Optimoidaan tallennustilaa</string>
-  <string name="slimming">Optimoidaan…</string>
+  <string name="slim_complete">Valmis</string>
+  <string name="slim_complete_action_title">Optimoitiin onnistuneesti</string>
+  <string name="slim_cost_time_minute">%d min jäljellä</string>
+  <string name="slim_cost_time_minute_and_second">%1$d m %2$d s jäljellä</string>
+  <string name="slim_cost_time_second">%d s jäljellä</string>
+  <string name="slim_description_dialog_detail">Vähennä laitteessa olevien kuvien tiedostokokoa. Alkuperäiset tiedostot säilytetään Mi Pilvessä.</string>
+  <string name="slim_description_dialog_ok">Selvä</string>
+  <string name="slim_description_dialog_slim_after">"Jälkeen:  167 Kt"</string>
+  <string name="slim_description_dialog_slim_before">"Ennen:  3.07 Mt"</string>
+  <string name="slim_exit_dialog_positive">Lopeta</string>
+  <string name="slim_exit_dialog_title">Lopeta optimointi</string>
+  <string name="slim_running">Optimoidaan…</string>
+  <string name="slim_space">Vapautettiin</string>
+  <string name="slim_stop">Lopeta optimointi</string>
+  <string name="special_type_eye_repair">Korjattiin suljetut silmät käyttäen AI:ta</string>
+  <string name="special_type_hdr">HDR</string>
+  <string name="special_type_night_beauty">AI Alhaisen Valon Kaunistus</string>
+  <string name="special_type_night_mode">AI-yötila</string>
+  <string name="special_type_portrait">AI kevyt muotokuvamaalaus</string>
+  <string name="special_type_wide_angle">AI-ultralaajakulma</string>
   <string name="start_debug">Debuggaa Galleria</string>
   <string name="start_to_use_face_albumset">Lajittele henkilöiden mukaan</string>
   <string name="sticker_ad">Esitteet</string>
@@ -1757,14 +1781,14 @@ mukauttaaksesi Galleriasi"</string>
   <string name="video_editor_abandon_changes_tip_title">Hylkää muutokset</string>
   <string name="video_editor_analyzing">Analysoidaan videota…</string>
   <string name="video_editor_audio">Ääni</string>
+  <string name="video_editor_audio_antiquity">Retro</string>
   <string name="video_editor_audio_custom">Valitse</string>
-  <string name="video_editor_audio_dynamic">Techno</string>
-  <string name="video_editor_audio_love">Romanttinen</string>
-  <string name="video_editor_audio_memory">Muisti</string>
+  <string name="video_editor_audio_dream">Unelma</string>
+  <string name="video_editor_audio_electronics">Elektroninen</string>
   <string name="video_editor_audio_none">Ei mitään</string>
-  <string name="video_editor_audio_rock">Rock</string>
-  <string name="video_editor_audio_sad">Balladi</string>
-  <string name="video_editor_audio_young">Ukulele</string>
+  <string name="video_editor_audio_quiet">Zen</string>
+  <string name="video_editor_audio_summertime">Kesä</string>
+  <string name="video_editor_audio_vitality">Voima</string>
   <string name="video_editor_auto_trim">Automaattinen leikkaus</string>
   <string name="video_editor_auto_trim_tip">Leikataan automaattisesti…</string>
   <string name="video_editor_cancel">Peruuta</string>
