--- a/Finnish/main/Backup.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Backup.apk/res/values-fi-rFI/strings.xml
@@ -202,7 +202,9 @@ https://appleid.apple.com/#!&amp;page=signin poistaaksesi käytöstä"</string>
   <string name="dialog_app_upgrade_message">Mi Moverista on uusi versio saatavilla. Päivitetäänkö Mi Mover nyt?</string>
   <string name="dialog_backup_password_backup_tips">Kohteita ei voi varmuuskopioida, kun varmuuskopion salasana on käytössä. Poista varmuuskopion salasana käytöstä.</string>
   <string name="dialog_backup_password_cancel">Peruuta</string>
+  <string name="dialog_backup_password_change_device_restore_tips">Mi Moveria ei voi käyttää, kun varmuuskopion salasana on käytössä. Poista varmuuskopion salasana ensin käytöstä.</string>
   <string name="dialog_backup_password_change_machine_tips">Et voi siirtää salasana-suojattuja varmuuskopioita. Poista varmuuskopion salasana käytöstä ennen Mi Moverin käyttämistä.</string>
+  <string name="dialog_backup_password_restore_tips">Kohteita ei voi palauttaa, kun varmuuskopion salasana on käytössä. Poista varmuuskopion salasana ensin käytöstä.</string>
   <string name="dialog_backup_password_to_settings">Asetukset</string>
   <string name="dir_date_format">yyyyMMdd_HHmmss</string>
   <string name="disable_encrypt_description">Älä salaa</string>
@@ -238,6 +240,7 @@ https://appleid.apple.com/#!&amp;page=signin poistaaksesi käytöstä"</string>
   <string name="feature_title_antispam">Estolista</string>
   <string name="feature_title_call_log">Puheluhistoria</string>
   <string name="feature_title_mms">Multimediaviestit</string>
+  <string name="feature_title_mms_setting">Viestien asetukset</string>
   <string name="file_uploading">Lähetetään…</string>
   <string name="files_backup_info">Kaikki tiedostot SD-muistikortilla (mukaanlukien kuvat, musiikit, videot, sovelluksien tiedot, jne.)</string>
   <string name="findlost_contact">Palauta yhteystiedot</string>
@@ -264,6 +267,7 @@ https://appleid.apple.com/#!&amp;page=signin poistaaksesi käytöstä"</string>
   <string name="hsa_verify_failed_message">Kaksivaiheinen todentaminen epäonnistui. Voit yrittää uudelleen tai poista kaksivaiheinen todentaminen käytöstä.</string>
   <string name="hsa_verify_retry">Yritä uudelleen</string>
   <string name="hsa_verify_shutdown">Poista käytöstä</string>
+  <string name="iCloud_ID_verification_tip">Syötä tekstiviestin vahvistuskoodi, joka lähetettiin Apple ID:een liitettyyn puhelinnumeroon. Älä huomioi iPhonen näytölläsi näytettävään ponnahdusikkunakoodiin.</string>
   <string name="icloud_backup_tip">Kirjaudu vanhan iOS laitteesi iCloud -tiliin</string>
   <string name="icloud_how_to_backup_tip_steps">"1. Avaa Asetukset vanhalla iOS laitteellasi ja valitse iCloud.
 2. Laita yhteystietojen ja muiden kohteiden valintakytkin päälle.
@@ -475,6 +479,7 @@ Vapauta vähintään %s."</string>
   <string name="trans_calculating_tip">Lasketaan %s…</string>
   <string name="trans_cancel_confirm">Lähetys käynnissä, lopetetaanko nyt?</string>
   <string name="trans_cancelling">Peruutetaan…</string>
+  <string name="trans_complete_restoring">Siirrettiin onnistuneesti. Palautetaan sovellustietoja…</string>
   <string name="trans_connect_failed_device_incompatible">Laite ei ole yhteensopiva. Peruuta lähetys ja yritä uudelleen.</string>
   <string name="trans_connect_failed_message">Ei voitu yhdistää, yritä uudelleen tai käynnistä laite uudelleen. Toisella laitteella mene Asetukset, Lisäasetukset, Mi Mover, napauta [Olen lähettäjä], tai käynnistä Mi Mover uudelleen laitteen käynnistyttyä uudestaan."</string>
   <string name="trans_connect_failed_title">"Ei voitu yhdistää"</string>
