--- a/Finnish/main/CleanMaster.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/CleanMaster.apk/res/values-fi-rFI/strings.xml
@@ -446,7 +446,7 @@
   <string name="pref_content_cleanup_white_list_none">Ei mitään</string>
   <string name="pref_summary_auto_clean_and_alert">Ajasta puhdistajan käynnistyä automaattisesti</string>
   <string name="pref_summary_auto_update_cleanup_db">Viimeksi päivitetty %s</string>
-  <string name="pref_summary_cleanup_white_list">Estä valittuja sovelluksia joutumasta siivotuksi</string>
+  <string name="pref_summary_cleanup_white_list">Estä valittuja tiedostoja joutumasta siivotuksi</string>
   <string name="pref_summary_expand_cache_group">Näytä välimuistin tiedot automaattisesti</string>
   <string name="pref_summary_garbage_auto_clean_content">Valitse, mitkä asiat puhdistetaan automaattisesti</string>
   <string name="pref_summary_garbage_cleanup_check_size">Puhdista automaattisesti, kun roskat yltää tietyn rajan</string>
