--- a/Finnish/main/DeskClock.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/DeskClock.apk/res/values-fi-rFI/strings.xml
@@ -215,6 +215,9 @@
   <string name="setting_alarm_arriving_summary">Lähetä ilmoitus ennen hälytystä</string>
   <string name="setting_alarm_arriving_title">Ilmoitus ennen hälytystä</string>
   <string name="settings">Asetukset</string>
+  <string name="shortcut_new_alarm">Aseta hälytys</string>
+  <string name="shortcut_start_timer">Käynnistä ajastin</string>
+  <string name="shortcut_stop_watch">Käynnistä sekuntikello</string>
   <string name="shut_down_keep_screen">Näyttöä ei pidetä päällä</string>
   <string name="shutdown_alarm_disable_summary">Hälytys ei soi, kun laite sammutetaan</string>
   <string name="shutdown_alarm_enable_summary">Hälytys soi, jos se on asetettu vähintään 5 minuuttia laitteesi sammuttamisen jälkeen</string>
