--- a/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
@@ -309,6 +309,7 @@ Muotokuvatilassa"</string>
   <string name="live_sticker_fragment_tab_name">TikTok tehosteet</string>
   <string name="live_sticker_network_error_hint">Verkkovirhe</string>
   <string name="live_sticker_updating">Päivitetään…</string>
+  <string name="lying_direct_hint">Nykyinen suunta</string>
   <string name="macro_mode">Macro</string>
   <string name="macro_mode_tip">Linssin ja kohteen etäisyys toisistaan ei pitäisi ylittää 10 cm</string>
   <string name="makeup_reset_toast">Tyhjennettiin meikkitehosteet onnistuneesti</string>
@@ -633,6 +634,7 @@ ja tuo henkilöt esiin."</string>
   <string name="pref_camera_whitebalance_entry_measure">Mittaa</string>
   <string name="pref_camera_whitebalance_title">WB</string>
   <string name="pref_camera_zoom_mode_entry_high_pixel">HEIKKO VALAISTUS</string>
+  <string name="pref_camera_zoom_mode_entry_macro">MACRO</string>
   <string name="pref_camera_zoom_mode_entry_standard">TAVALLINEN</string>
   <string name="pref_camera_zoom_mode_entry_tele">TELE</string>
   <string name="pref_camera_zoom_mode_entry_ultra">ULTRA LAAJA</string>
