--- a/Finnish/main/MiuiHome.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiHome.apk/res/values-fi-rFI/strings.xml
@@ -30,9 +30,11 @@
     <string name="announce_for_open_default_preview">Avattiin oletusaloitusnäytön asetukset</string>
     <string name="announce_for_open_folder">Avattiin kansio %1$s</string>
     <string name="announce_for_open_launcher_menu">Avattiin valikko</string>
+    <string name="announce_for_search_bar">Hakupalkki</string>
     <string name="announce_for_show_uninstall_dialog">Poistamisikkuna ilmestyi. Peruuta tai vahvista.</string>
     <string name="announce_for_unchecked">%1$s, ei tarkistettu</string>
     <string name="announce_for_widget_span">Leveys %1$d, korkeus %2$d</string>
+    <string name="announce_for_xiaoai">Mi AI</string>
     <string name="app_already_exist">Sovellus on jo olemassa</string>
     <string name="app_being_backup_message">Sovellusta varmuuskopioidaan</string>
     <string name="app_being_restored_message">Sovellusta palautetaan</string>
@@ -290,6 +292,8 @@
     <string name="preferences_general_title">Lisäasetukset</string>
     <string name="preferences_title">Käynnistimen asetukset</string>
     <string name="preferred_app_settings_not_selected">Ei valittu</string>
+    <string name="privacy_thumbnail_blur_summary">Sumenna sovelluksien esikatselu Viimeaikaisissa</string>
+    <string name="privacy_thumbnail_blur_title">Sumenna sovelluksien esikatselu</string>
     <string name="quick_app">Pikasovellukset</string>
     <string name="recents_config_title">Viimeaikaiset</string>
     <string name="recommend_apk_size_and_desc">%1$d Mt | %2$s</string>
