--- a/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
@@ -547,6 +547,7 @@ d. MMMM'ta'"</string>
      <string name="lock_screen_magazine_default_content">Päivittäinen annos tuoreita kuvia</string>
      <string name="lock_screen_magazine_default_title">Taustakuvan Karuselli</string>
      <string name="lock_screen_magazine_global_button_text">Lisää</string>
+     <string name="lock_screen_magazine_label">Avaa Taustakuvan Karuselli</string>
      <string name="lock_screen_magazine_preview_fullscreen_bottom_button_global_text">Lisää</string>
      <string name="lock_screen_magazine_preview_fullscreen_bottom_button_text">Siirry</string>
      <string name="lock_screen_no_sim_card_emergency_only">Vain hätäpuhelut</string>
