--- a/Finnish/main/TeleService.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/TeleService.apk/res/values-fi-rFI/strings.xml
@@ -1285,12 +1285,16 @@ Laitteesi lukitaan automaattisesti jos yrityksesi menee vielä väärin"</string
   <string name="preferred_network_type_cdma">CDMA</string>
   <string name="preferred_network_type_pref_entries_3g_preferred">Suosi 3G</string>
   <string name="preferred_network_type_pref_entries_3g_preferred_cdma">Suosi 3G (CDMA)</string>
+  <string name="preferred_network_type_pref_entries_3g_preferred_lm_cr">Automaattinen WCDMA/GSM</string>
   <string name="preferred_network_type_pref_entries_4g_preferred">Suosi LTE</string>
   <string name="preferred_network_type_pref_entries_4g_preferred_cdma">Suosi 4G (CDMA)</string>
+  <string name="preferred_network_type_pref_entries_4g_preferred_lm_cr">Automaattinen LTE/WCDMA/GSM</string>
   <string name="preferred_network_type_pref_entries_auto">Automaattinen</string>
   <string name="preferred_network_type_pref_entries_global">Maailmanlaajuinen</string>
   <string name="preferred_network_type_pref_entries_only_2g">Vain 2G (säästää akkua)</string>
+  <string name="preferred_network_type_pref_entries_only_2g_lm_cr">Vain GSM</string>
   <string name="preferred_network_type_pref_entries_only_3g">Vain 3G</string>
+  <string name="preferred_network_type_pref_entries_only_3g_lm_cr">Vain WCDMA</string>
   <string name="preferred_network_type_td_scdma">GSM/TD-SCDMA</string>
   <string name="preferred_network_type_title">Ensisijaisen verkon tyyppi</string>
   <string name="preferred_phone_account">Ensisijainen soittotili</string>
